k8s/11-triage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triage-service
  namespace: healthsys
  labels:
    app: triage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triage-service
  template:
    metadata:
      labels:
        app: triage-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8084"
    spec:
      containers:
        - name: triage-service
          image: ghcr.io/diegobenevidss/healthsys-triage-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 180
            periodSeconds: 30
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: triage-service
  namespace: healthsys
spec:
  selector:
    app: triage-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
